# paganini

./: CMakeLists.txt  notes.md
src/: common.h  main.cpp
src/audio/: sound_board.cpp  sound_board.h  wav_file.cpp  wav_file.h
src/core/: app.cpp  app.h  component.cpp  component.h  entity.cpp  entity.h  resource.cpp  resource.h  system.cpp  system.h
src/io/: file.cpp  file.h  input.cpp  input.h
src/renderer/: renderable.cpp  renderable.h  renderer.cpp  renderer.h  vertex_buffer.cpp  vertex_buffer.h  window.cpp  window.h
